tests/ui/type-qpath-unexpected2.stderr
error: no rules expected the token `@`
 --> $DIR/type-qpath-unexpected2.rs:5:22
  |
5 |     input = [{ <T as @ }]
  |                      ^ no rules expected this token in macro call
